fix: outliner rotation parsing